--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "bevy-template"
 version = "0.1.0"
 authors = ["TheRawMeatball <therawmeatball@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
@@ -15,18 +15,18 @@ opt-level = 1
 dev = ["bevy/dynamic"]
 
 [dependencies]
-bevy = { version = "0.5.0" }
-wgpu = "0.9"
-wgpu-types = "0.9.0"
+bevy = { git = "https://github.com/bevyengine/bevy" }
+wgpu-types = "0.11"
+wgpu = "0.11"
 rand = "0.8"
 bytemuck = { version = "1.4", features = [ "derive" ] }
 image = "0.23"
 
 [target.'cfg(target_os = "android")'.dependencies]
-ndk-glue = "0.3"
+ndk-glue = "0.5"
 
 
-[patch.crates-io]
+[patch."https://github.com/bevyengine/bevy"]
 # uncomment if you want to use a local fork
 bevy = { path = "../bevy" }
 
@@ -40,7 +40,7 @@ min_sdk_version = 16
 target_sdk_version = 29
 
 [package.metadata.android.application]
-label = "Shoddy Bevy FN"
+label = "Bevy slimemold"
 
 [package.metadata.android.application.activity]
 orientation = "landscape"
